zellij-integration-tests/tests/snapshots/nested_fullscreen__depth2_guest_fullscreen_fills_display.snap
---
source: zellij-integration-tests/tests/nested_fullscreen.rs
assertion_line: 161
expression: normalized(&fullscreen_grid)
---
 Zellij (test-0 ▸ test-1 [NESTED])  Tab #1  + 
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
