zellij-integration-tests/tests/snapshots/nested_fullscreen__depth3_inner_fullscreen_breadcrumb.snap
---
source: zellij-integration-tests/tests/nested_fullscreen.rs
assertion_line: 486
expression: normalized(&fullscreen_grid)
---
 Zellij (test-0 ▸ test-1 ▸ test-2)  Tab #1  + 
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
                                                                                                                        
